[gd_scene load_steps=30 format=3 uid="uid://dpge13kv30ref"]

[ext_resource type="Script" uid="uid://csuw1e6bt2myc" path="res://Scripts/player.gd" id="1_4v7yv"]
[ext_resource type="Texture2D" uid="uid://b22l8oxq4bpay" path="res://assets/Items/Weapons/MagicWand/Sprite.png" id="3_vgqql"]
[ext_resource type="Texture2D" uid="uid://bsy0m22e576pg" path="res://assets/Actor/Characters/SorcererOrange/SeparateAnim/Walk.png" id="3_xqekp"]
[ext_resource type="Texture2D" uid="uid://nqsl36rbbhsk" path="res://assets/Ui/LifeReceptacle/heart_2.png" id="4_vgqql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u61ep"]
size = Vector2(20, 20.25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohv5s"]
atlas = ExtResource("3_xqekp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5km8"]
atlas = ExtResource("3_xqekp")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qayqk"]
atlas = ExtResource("3_xqekp")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ern6"]
atlas = ExtResource("3_xqekp")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw883"]
atlas = ExtResource("3_xqekp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jwls"]
atlas = ExtResource("3_xqekp")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_soum8"]
atlas = ExtResource("3_xqekp")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80m6p"]
atlas = ExtResource("3_xqekp")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_erm3r"]
atlas = ExtResource("3_xqekp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1eym"]
atlas = ExtResource("3_xqekp")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxxe5"]
atlas = ExtResource("3_xqekp")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jttq"]
atlas = ExtResource("3_xqekp")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqf1s"]
atlas = ExtResource("3_xqekp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_76ydi"]
atlas = ExtResource("3_xqekp")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_21oyq"]
atlas = ExtResource("3_xqekp")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlnae"]
atlas = ExtResource("3_xqekp")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l230d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohv5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5km8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qayqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ern6")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw883")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jwls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soum8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80m6p")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erm3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1eym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxxe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jttq")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqf1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76ydi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21oyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlnae")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4saia"]
size = Vector2(19.535831, 18.524237)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf645"]
size = Vector2(5, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("4_vgqql")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("4_vgqql")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("4_vgqql")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("4_vgqql")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1ek2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}],
"loop": true,
"name": &"one",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"three",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}],
"loop": true,
"name": &"two",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
z_index = 3
collision_mask = 7
script = ExtResource("1_4v7yv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.55271e-15)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_u61ep")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l230d")
animation = &"walk_right"

[node name="hitBox" type="Area2D" parent="."]
scale = Vector2(1.21361, 1.2956)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(0, -2.3002718e-07)
scale = Vector2(1.0000001, 1)
shape = SubResource("RectangleShape2D_4saia")

[node name="Staff" type="Sprite2D" parent="."]
position = Vector2(11, 0)
texture = ExtResource("3_vgqql")

[node name="Staff_area" type="Area2D" parent="Staff"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Staff/Staff_area"]
shape = SubResource("RectangleShape2D_gf645")

[node name="Weapon_Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HPBar" type="AnimatedSprite2D" parent="CanvasLayer/MarginContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
position = Vector2(25, 22)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_f1ek2")
animation = &"two"

[node name="Panel2" type="Panel" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2

[connection signal="body_entered" from="hitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="Staff/Staff_area" to="." method="_on_staff_area_body_entered"]
[connection signal="timeout" from="Weapon_Timer" to="." method="_on_weapon_timer_timeout"]
